# CFD_assignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: libcore.dylib
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/CFD/: Laplician.hpp
src/core/FVM/: Div.hpp  DivType.h  Laplacian.hpp  Laplician.hpp
src/core/Fields/: BaseField.hpp  BoundaryCondition.hpp  CellField.hpp  FaceField.hpp  Field.hpp  FieldType.hpp
src/core/Fields/FieldOperators/: Divergence.hpp  Gradient.hpp
src/core/Geometry/: BoundaryPatch.cpp  BoundaryPatch.h  Cell.cpp  Cell.h  Face.cpp  Face.h  Mesh.cpp  Mesh.h
src/core/Math/: Solver.cpp  Solver.h  Solver.hpp  SparseMatrix.hpp  Tensor.hpp  Vector.hpp  interpolation.hpp
src/core/thread_pool/: threadpool.hpp
tempFile/OpenFOAM_tutorials/cavity/0/: U  epsilon  k  nuTilda  nut  omega  p
tempFile/OpenFOAM_tutorials/cavity/constant/: momentumTransport  physicalProperties
tempFile/OpenFOAM_tutorials/cavity/constant/polyMesh/: boundary  faces  neighbour  owner  points
tempFile/OpenFOAM_tutorials/cavity/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
tempFile/OpenFOAM_tutorials/pitzDailySteady/0/: f  omega  v2
tempFile/OpenFOAM_tutorials/pitzDailySteady/100/: U  epsilon  k  nut  p  phi
tempFile/OpenFOAM_tutorials/pitzDailySteady/100/uniform/: time
tempFile/OpenFOAM_tutorials/pitzDailySteady/200/: U  epsilon  k  nut  p  phi
tempFile/OpenFOAM_tutorials/pitzDailySteady/200/uniform/: time
tempFile/OpenFOAM_tutorials/pitzDailySteady/286/: U  epsilon  k  nut  p  phi
tempFile/OpenFOAM_tutorials/pitzDailySteady/286/uniform/: time
tempFile/OpenFOAM_tutorials/pitzDailySteady/constant/: momentumTransport  physicalProperties
tempFile/OpenFOAM_tutorials/pitzDailySteady/constant/polyMesh/: boundary  faces  neighbour  owner  points
tempFile/OpenFOAM_tutorials/pitzDailySteady/postProcessing/streamlines/0/: tracks.vtk
tempFile/OpenFOAM_tutorials/pitzDailySteady/postProcessing/streamlines/100/: tracks.vtk
tempFile/OpenFOAM_tutorials/pitzDailySteady/postProcessing/streamlines/200/: tracks.vtk
tempFile/OpenFOAM_tutorials/pitzDailySteady/postProcessing/streamlines/285/: tracks.vtk
tempFile/OpenFOAM_tutorials/pitzDailySteady/postProcessing/streamlines/286/: tracks.vtk
tempFile/OpenFOAM_tutorials/pitzDailySteady/system/: blockMeshDict  controlDict  functions  fvSchemes  fvSolution
tempFile/first_assignment/: CMakeLists.txt  build.bat  complex_mesh.msh  fv_solver.cpp  fv_solver.h  geometry.cpp  geometry.h  main.cpp  parameters.txt
tempFile/mesh/: boundary  faces  neighbour  owner  points
tempFile/smallfvm3.0/: CElements.hpp  CFaces.hpp  CMesh.hpp  Console2.cpp  Field.hpp  Point3D.hpp
test/: BoundaryPatch.cpp  BoundaryPatch.h  Cell.h  Face.cpp  Face.h  Mesh.cpp  Mesh.h  Tensor.hpp  Vector.hpp  main.cpp
